fix background image not fitting on mobile devices

--- a/src/styles.less
+++ b/src/styles.less
@@ -126,6 +126,7 @@ nav {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding-block: 20px;
 
     h2 {
         margin: 0;
@@ -211,9 +212,9 @@ nav {
 .about__us {
     display: flex;  
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./images/coffee-house.jpg');
-    background-position-y: -200px;
+    // background-position-y: -200px;
     background-attachment: fixed;
-    background-size: auto;
+    background-size: cover;
     margin-bottom: 0;
     min-height: 100vh;
     place-content: center;
